--- a/OnClick.html
+++ b/OnClick.html
@@ -84,7 +84,7 @@
                 </div>
             </label>
         </div>    
-    </div>
+        <!--previous end of wrapper  -->
      <!-- Testimonial -->
      <section id="testimonials">
         <!-- heading -->
@@ -116,7 +116,7 @@
         <button  class="submit" onclick="submitComment()">Submit</button>   
     </div>
     </div>
-
+    </div>
     <!-- testimonial -->
     <script src="testimonial.js"></script>
     <script src="comment.js"></script>
