--- a/OnClick.html
+++ b/OnClick.html
@@ -48,8 +48,8 @@
                 <div class="row">
                     <div class ="icon">1</div>
                     <div class = "description">
-                        <h4>Winter</h4>
-                        <p>Winter has so much to offer-creative activities hioghaeoighoaeigheoighoahgoiheoaghoeighaeioweiofjaowiefjaiweofjojfiawjfoijweofjawejoiwgaionaoegneia</p>
+                        <!-- <h4>Winter</h4>
+                        <p>Winter has so much to offer-creative activities hioghaeoighoaeigheoighoahgoiheoaghoeighaeioweiofjaowiefjaiweofjojfiawjfoijweofjawejoiwgaionaoegneia</p> -->
                     </div>
                 </div>
             </label>
@@ -58,8 +58,8 @@
                 <div class="row">
                     <div class ="icon">2</div>
                     <div class = "description">
-                        <h4>Digital technology</h4>
-                        <p>Gets better every day - stay tuned</p>
+                        <!-- <h4>Digital technology</h4>
+                        <p>Gets better every day - stay tuned</p> -->
                     </div>
                 </div>
             </label>
@@ -68,8 +68,8 @@
                 <div class="row">
                     <div class ="icon">3</div>
                     <div class = "description">
-                        <h4>Gloabalization</h4>
-                        <p>Help people all over the world</p>
+                        <!-- <h4>Gloabalization</h4>
+                        <p>Help people all over the world</p> -->
                     </div>
                 </div>
             </label>
@@ -78,8 +78,8 @@
                 <div class="row">
                     <div class ="icon">4</div>
                     <div class = "description">
-                        <h4>New technologies</h4>
-                        <p>Space engineering becomes more and more advanced</p>
+                        <!-- <h4>New technologies</h4>
+                        <p>Space engineering becomes more and more advanced</p> -->
                     </div>
                 </div>
             </label>
