readjust sizing of cards and resize testimonials

--- a/OnClick.html
+++ b/OnClick.html
@@ -21,9 +21,14 @@
     <script src="https://kit.fontawesome.com/0fa56203e2.js" crossorigin="anonymous"></script>
     <script src="rating.js" defer></script>
 
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <a href="Home.html" class="home-button">Return to Home</a>
+    
     <style>
         .home-button {
             padding: 10px 20px;
@@ -32,7 +37,7 @@
             border: none;
             border-radius: 5px;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 30px;
             cursor: pointer;
         }
         .home-button:hover {
@@ -42,6 +47,9 @@
     
     <!-- card animation -->
     <div class ="wrapper">
+        <div class="new-today">
+            <h1>What's new today?</h1>
+        </div>
         <div class = "container">
             <input type="radio" name="slide" id="c1" checked>
             <label for="c1" class="card">
@@ -90,7 +98,7 @@
         <!-- heading -->
          <div class="testimonial-heading">
                    <span>Comments</span>
-                   <h1>Clients Say</h1>
+                   <h1>Wanna say something?</h1>
          </div>
          <!-- replace testimonials by script -->
          <!-- testimonials-box-container -->
