resize fonts of on-click

--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,11 @@
                 <div>
                     <button id="backButton">Back</button>
                     <button id="nextButton">Next</button>
+                    <style>
+                        #backButton, #nextButton {
+                            font-size: 2vw; /* Resize font size to 50px */
+                        }
+                    </style>
                 </div>
             </div>
             
