edit multiplication sign

--- a/OnClick.html
+++ b/OnClick.html
@@ -110,7 +110,7 @@
     <!-- comment prompt (not yet) -->
     <div class="commentPrompt" id="commentPrompt">
         <div class="prompt">
-            <button class="close-btn" onclick="closePrompt()">✖</button>
+            <button class="close-btn" onclick="closePrompt()">&times</button>
             <div class="rating-box">
                 <header>How was your experience?</header>
                 <div class="stars">
