resize close button

--- a/OnClick.html
+++ b/OnClick.html
@@ -111,6 +111,14 @@
     <div class="commentPrompt" id="commentPrompt">
         <div class="prompt">
             <button class="close-btn" onclick="closePrompt()">&times</button>
+            <style>
+                .close-btn {
+                    font-size: 30px; /* Resize the &times; symbol */
+                    border: none;
+                    background: transparent;
+                    cursor: pointer;
+                }
+            </style>
             <div class="rating-box">
                 <header>How was your experience?</header>
                 <div class="stars">
